--- a/packages/proto/package.json
+++ b/packages/proto/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "public/index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "http-server"
+    "start": "http-server public"
   },
   "author": "",
   "license": "ISC",
