--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "sleep-status",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "public/index.js",
   "author": "",
   "license": "ISC"
   ,
