failing to fetch data from database for some reason

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "public/index.js",
   "author": "",
-  "license": "ISC"
-  ,
+  "license": "ISC",
     "workspaces": [
         "packages/*"
     ]
