--- a/merged-app/package.json
+++ b/merged-app/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^20.11.24",
     "concurrently": "^6.3.0",
     "nodemon": "^2.0.20",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.3",
+    "vite": "^5.2.2"
   }
 }
